Bug 72013 : Search bar doesn't align with anything and buttons are randomly spaced
Review : https://reviewboard.eng.vmware.com/r/322365/

http://bugzilla.zimbra.com/show_bug.cgi?id=72013

Copied from Perforce
 Change: 362605

--- a/WebRoot/css/zm.css
+++ b/WebRoot/css/zm.css
@@ -383,6 +383,20 @@ INPUT[type="text"].search_input, INPUT[type="text"].search_input-expanded {
 	height:20px;
 }
 
+.ZmSearchResultText {
+    width: 175px;
+    text-align: right;
+    vertical-align: middle;
+    padding: 0px 3px 0px 0px;
+}
+.ZmSearchResultInputField {
+    width:100%;
+    padding: 0px 3px 0px 0px;
+}
+.ZmSearchResultButton {
+    padding: 0px 3px 0px 0px;
+}
+
 /* cell surrounding a separator in the search toolbar */
 .ZmSearchToolbarSeparatorCell {}
 
